# p2p_messenger

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  readme.md  server.cpp
CentralServer/: CMakeLists.txt
CentralServer/include/: CentralServer.h
CentralServer/src/: CentralServer.cpp
backend/: CMakeLists.txt
backend/include/: Chat.h  Client.h  ISendable.h  Message.h  Storage.h  User.h
backend/src/: Client.cpp  Peer.cpp  Server.cpp  Storage.cpp  User.cpp
begining/: begining.sln
begining/begining/: Storage.h  begining.vcxproj  begining.vcxproj.filters
frontend/: .gitignore  App.cpp  App.h  CMakeLists.txt  constants.cpp  constants.h  frontend.cpp  frontend.h  main  main.cpp  ncurscript.cpp  ncurscript.h  utilities.cpp  utilities.h
frontend/components/: App.cpp  App.h  Base.cpp  Base.h  constants.cpp  utilities.cpp
frontend/lang/: en.cpp  en.h
include/: API.h  BasicClasses.h  CentralServer.h  Chat.h  Client.h  Config.h  IReceivable.h  IRecievable.h  ISendable.h  Listen.h  Message.h  Peer.h  Router.h  Server.h  Storage.h  User.h  Utilities.h  Сhat.h
src/: API.cpp  CentralServer.cpp  Chat.cpp  Client.cpp  Config.cpp  Listen.cpp  Message.cpp  Peer.cpp  Router.cpp  Server.cpp  Storage.cpp  User.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  test.cpp
tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/lib/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
